--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #0C0B1F;
   min-height: 100vh;
+  color: white;
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  font-size: 20px;
+  padding-top: 30px;
 }
 
-.App body {
+.App .content {
   margin: 0 10%;
+  padding: 20px 0 50px 0;
   display: flex;
 }
