--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,12 @@
   padding: 20px 0 50px 0;
   display: flex;
 }
+
+.note {
+  font-size: 16px;
+  color: #777;
+  border-style: inset;
+  border-width: 1px;
+  width: 80%;
+  padding: 10px;
+}
